update Java to 17 version (#155)