@@ -1,7 +1,6 @@
 package mate.academy.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import mate.academy.model.dto.ProductResponseDto;
 import mate.academy.service.ProductService;
 import mate.academy.service.mapper.ProductDtoMapper;
@@ -27,7 +26,7 @@ public class ProductController {
     public List<ProductResponseDto> getAllProducts() {
         return productService.findAll().stream()
                 .map(productDtoMapper::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @DeleteMapping("/{id}")
