@@ -1,7 +1,6 @@
 package mate.academy.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import mate.academy.model.User;
 import mate.academy.model.dto.UserRegistrationDto;
 import mate.academy.model.dto.UserResponseDto;
@@ -31,7 +30,7 @@ public class UserController {
         return userService.findAll()
                 .stream()
                 .map(userMapper::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/{id}")
